<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.auth.fragment.AuthForgotFragment">
    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.main.MainActivity">

        <RelativeLayout
            android:id="@+id/layout_user"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/light_gray"
            android:padding="@dimen/twenty_dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/image_user"
                android:layout_width="@dimen/seventy_five_dp"
                android:layout_height="@dimen/seventy_five_dp"
                android:contentDescription="@string/desc_image"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/text_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/five_dp"
                android:layout_marginTop="@dimen/ten_dp"
                android:textSize="@dimen/twenty_sp"
                android:hint="@string/full_name"
                android:layout_toEndOf="@id/image_user" />

            <TextView
                android:id="@+id/text_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/five_dp"
                android:textSize="@dimen/eighteen_sp"
                android:hint="@string/email"
                android:layout_toEndOf="@id/image_user"
                android:layout_below="@+id/text_name"/>

            <TextView
                android:id="@+id/text_token"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/five_dp"
                android:textSize="13sp"
                android:hint="@string/token"
                android:layout_toEndOf="@id/image_user"
                android:layout_below="@+id/text_email"/>

            <Button
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:text="@string/password"
                android:id="@+id/button_main_password"/>

            <Button
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:text="@string/logout"
                android:id="@+id/button_main_logout"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_number"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/light_gray"
            android:padding="@dimen/twenty_dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_user">

            <TextView
                android:id="@+id/text_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/thirty_dp"
                android:hint="0"
                android:textSize="@dimen/one_hundred_sp"
                tools:ignore="RelativeOverlap" />


            <Button
                android:id="@+id/button_main_plus"
                android:layout_width="150dp"
                android:layout_height="@dimen/seventy_five_dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:textSize="@dimen/thirty_sp"
                android:text="+" />

            <Button
                android:id="@+id/button_main_min"
                android:layout_width="150dp"
                android:layout_height="@dimen/seventy_five_dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:textSize="@dimen/thirty_sp"
                android:text="-" />

        </RelativeLayout>

    </android.support.constraint.ConstraintLayout>
</ScrollView>